# wasi-sse-example

./: README.md
plugin/: Cargo.toml  wit
plugin/src/: bindings.rs  lib.rs
sse/: index.mjs  package.json
