[package]
name = "identity"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.30.0", features = ["bitflags"] }
anyhow = "1.0.86"
autosurgeon = "0.8.5"
automerge = "0.5.11"
route-recognizer = "0.3.1"
mime_guess = "2.0.5"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
url = "2.5.2"
base64 = "0.22.1"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "plat:plugin"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"wasi:http" = { path = "wit/deps/http" }
"wasi:clocks" = { path = "wit/deps/clocks" }
"wasi:io" = { path = "wit/deps/io" }
"wasi:random" = { path = "wit/deps/random" }
"wasi:cli" = { path = "wit/deps/cli" }
"wasi:filesystem" = { path = "wit/deps/filesystem" }
"wasi:sockets" = { path = "wit/deps/sockets" }
